[gd_scene load_steps=7 format=2]

[ext_resource path="res://hud/VirtualGamepad.gd" type="Script" id=1]
[ext_resource path="res://assets/placeholder/lineLight01.png" type="Texture" id=2]
[ext_resource path="res://assets/placeholder/lineLight04.png" type="Texture" id=3]
[ext_resource path="res://assets/placeholder/lineLight03.png" type="Texture" id=4]
[ext_resource path="res://assets/placeholder/lineLight08.png" type="Texture" id=5]
[ext_resource path="res://assets/placeholder/lineLight05.png" type="Texture" id=6]

[node name="VirtualGamepad" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Directions" type="Control" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 340.0
margin_top = -80.0
margin_right = 380.0
margin_bottom = -40.0
rect_scale = Vector2( 2, 2 )

[node name="Up" type="TouchScreenButton" parent="CanvasLayer/Directions"]
position = Vector2( 640, 395 )
normal = ExtResource( 2 )
passby_press = true

[node name="Right" type="TouchScreenButton" parent="CanvasLayer/Directions"]
position = Vector2( 696, 430 )
normal = ExtResource( 3 )
passby_press = true

[node name="Left" type="TouchScreenButton" parent="CanvasLayer/Directions"]
position = Vector2( 610, 430 )
normal = ExtResource( 4 )
passby_press = true

[node name="Down" type="TouchScreenButton" parent="CanvasLayer/Directions"]
position = Vector2( 640, 490 )
normal = ExtResource( 5 )
passby_press = true

[node name="Confirm" type="TouchScreenButton" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 35, 735 )
scale = Vector2( 2, 2 )
normal = ExtResource( 6 )

[connection signal="pressed" from="CanvasLayer/Directions/Up" to="." method="_on_Up_pressed"]
[connection signal="released" from="CanvasLayer/Directions/Up" to="." method="_on_Up_released"]
[connection signal="pressed" from="CanvasLayer/Directions/Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="CanvasLayer/Directions/Right" to="." method="_on_Right_released"]
[connection signal="pressed" from="CanvasLayer/Directions/Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="CanvasLayer/Directions/Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="CanvasLayer/Directions/Down" to="." method="_on_Down_pressed"]
[connection signal="released" from="CanvasLayer/Directions/Down" to="." method="_on_Down_released"]
[connection signal="pressed" from="CanvasLayer/Confirm" to="." method="_on_Confirm_pressed"]
